Completando Ethernet | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Capa de Enlace para Redes LAN.md
@@ -75,6 +75,12 @@ La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido po
 ## Ethernet
 
 Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son las basadas en Ethernet, desarrolladas por el comité de estándares IEEE 802.3. Como ya mencionamos anteriormente cada protocolo MAC implementa a su manera el control de acceso al medio, Ethernet concretamente utiliza la técnica conocida como ***CSMA/CD***.
+
+>[!tldr] Slot Time
+>En las redes Ethernet, el ***slot time*** es la cantidad de tiempo que toma la transmisión de una trama mínima de 512 bits. Es un parámetro crucial en el funcionamiento del protocolo CSMA/CD.
+>El slot time se establece generalmente en 51,2 microsegundos para garantizar que una estación de red pueda detectar una colisión antes de terminar de enviar la trama completa. Esta decisión se basa en la necesidad de facilitar la detección de colisiones y asegurar que las tramas se transmitan correctamente a través del enlace. Además, el slot time ayuda a establecer el tamaño mínimo de las tramas que se pueden transmitir, garantizando una correcta propagación de la señal en la red.
+>El tamaño mínimo de las tramas puede variar de acuerdo a la capacidad del enlace: a mayor capacidad, mayor será el tamaño mínimo de la trama para respetar el slot time.
+
 El formato normal de una trama Ethernet está compuesta por los siguientes campos:
 
 - **Preámbulo**: Consiste en un campo compuesto por 7 octetos de bits ceros y unos alternados, utilizados para establecer la sincronización entre el emisor y el receptor.
