[Refactor] corrections doble space and orthography in logic 2.1

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
@@ -5,12 +5,12 @@ En lógica, estas unidades básicas o entidades se denominan sentencias. En corr
 >[!tldr] Inconsistencia de las Proposiciones
 >Dado un conjunto de proposiciones, se dice que el conjunto es ***consistente*** si todas las proposiciones son verdaderas, de caso contrario el conjunto se dice ***inconsistente***.
 
-Existen proposiciones que son siempre verdaderas, otras que son siempre falsas y otras cuya verdad depende del contexto. Aquellas proposiciones que son siempre verdaderas se dicen que son ***lógicamente verdaderas*** o ***tautológicas***, mientras que aquellas proposiciones que son siempre falsas son llamadas ***lógicamente falsas*** o ***contradicciones***. Existe un caso particular de proposiciones en las cuales su falsedad o veracidad va a depender del contexto en el que sean evaluados, este tipo de proposiciones se denominan ***contingencias***.
+Existen proposiciones que son siempre verdaderas, otras que son siempre falsas y otras cuya verdad depende del contexto. Aquellas proposiciones que son siempre verdaderas se dicen que son ***lógicamente verdaderas*** o ***tautológicas***, mientras que aquellas proposiciones que son siempre falsas son llamadas ***lógicamente falsas*** o ***contradicciones***. Existe un caso particular de proposiciones en las cuales su **falsedad** o veracidad va a depender del contexto en el que sean evaluados, este tipo de proposiciones se denominan ***contingencias***.
 
 ## Lenguaje de la Lógica Proposicional
 
 >[!note] Sobre este Lenguaje
->Con fin de introducirnos más en profundidad en los conceptos de la lógica proposicional, se utiliza el siguinete lenguaje para explicar tanto propiedades como reglas de este tipo de lógica.
+>Con fin de introducirnos más en profundidad en los conceptos de la lógica proposicional, se utiliza el siguiente lenguaje para explicar tanto propiedades como reglas de este tipo de lógica.
 
 - **Alfabeto**:
 	- Letras proposicionales $(A-Z)$ y estas mismas letras con subíndices enteros positivos $(A_i - Z_i)$.
@@ -35,12 +35,12 @@ Si bien el alfabeto original permite construir todas las operaciones lógicas a 
 >4. $\rightarrow$.
 >5. $\equiv$.
 
-En la lógica proposicional clásica hay solo dos valores de verdad: Verdadero (T) y Falso (F). Una interpretación bajo este sistema consiste de asignar un valor de verdad a cada letra proposicional y luego evaluar las proposiciones compuestas.  Para obtener un valor de verdad de una fórmula bien formada arbitraria se necesita dar significado a los conectivos y basándonos en eso construir tablas de verdad. Para simplificar el lenguaje diremos que una fórmula bien formada es verdadera si toma el valor de verdad $V$ y diremos que es falsa si toma el valor $F$. Por ejemplo veamos la siguiente imagen.
+En la lógica proposicional clásica hay solo dos valores de verdad: Verdadero (T) y Falso (F). Una interpretación bajo este sistema consiste de asignar un valor de verdad a cada letra proposicional y luego evaluar las proposiciones compuestas. Para obtener un valor de verdad de una fórmula bien formada arbitraria se necesita dar significado a los conectivos y basándonos en eso construir tablas de verdad. Para simplificar el lenguaje diremos que una fórmula bien formada es verdadera si toma el valor de verdad $V$ y diremos que es falsa si toma el valor $F$. Por ejemplo veamos la siguiente imagen.
 
 ![[tabla-verdad-ejemplo.png]]
 
 Para este caso no podemos decir que esta fórmula bien formada es verdadera ni falsa, ya que su valor depende del contexto, es decir, estamos ante la presencia de una contingencia.
-Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Si dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo  $A \equiv ¬(¬A)$, ya que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
+Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Si dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo $A \equiv ¬(¬A)$, ya que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
 
 ### Conectivos, Tautologías y Contradicciones
 
@@ -56,7 +56,7 @@ Para verificar si una sentencia lógicamente válida es ***decidible***, solo ha
 
 ### Deducción en la Lógica Proposicional
 
-La deducción en la lógica proposicional es un poco diferente al anteriormente presentado en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tolens***.
+La deducción en la lógica proposicional es un poco diferente al anteriormente presentado en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 
 - **Esquema de Axiomas**:
 	- $A$, $B$ y $C$ son metavariables que representan fórmulas bien formadas en $L$.
