Refactoring | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 6/4. Pruebas de Versión y Usuario.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 6/4. Pruebas de Versión y Usuario.md
@@ -1,15 +1,15 @@
-## Pruebas de Versión
-Las pruebas de versión son el proceso de poner a prueba una versión particular de un sistema que se pretende usar fuera del equipo de desarrollo. En un proyecto complejo, la versión podría ser para otros equipos que desarrollan sistemas relacionados.
+Las pruebas de versión son el proceso de poner a prueba una versión particular de un sistema que se pretende usar fuera del equipo de desarrollo. En un proyecto complejo, la versión podría ser para otros equipos que desarrollan sistemas relacionados. Si bien en principio son muy similares a las pruebas de sistema, tiene ciertas diferencias
 
-Diferencias entre Pruebas de Versión y Pruebas del Sistema durante el Desarrollo:
 - Un equipo responsable de las pruebas de versión no interviene en el desarrollo del sistema.
-- Las pruebas del sistema por parte del equipo de desarrollo deben enfocarse en el descubrimiento de bugs en el sistema (pruebas de defecto).
-- Las pruebas de versión es comprobar que el sistema cumpla con los requerimientos y sea suficientemente bueno para uso externo (pruebas de validación).
+- Las pruebas del sistema por parte del equipo de desarrollo deben enfocarse en el descubrimiento de bugs en el sistema.
+- Las pruebas de versión es comprobar que el sistema cumpla con los requerimientos y sea suficientemente bueno para uso externo.
 
 ### Pruebas Basadas en Requerimientos
+
 En las pruebas basadas en requerimientos se considera cada requerimiento y se deriva un conjunto de pruebas para éste. Estas pruebas son de validación más que de defecto, intentando demostrar que el sistema implementó adecuadamente sus requerimientos.
 
 ### Pruebas de Escenario
+
 Las pruebas de escenario crean escenarios típicos de uso y se utilizan en el desarrollo de casos de prueba para el sistema. 
 
 **Ejemplo de Modelo de Escenario**:
@@ -17,20 +17,19 @@ Las pruebas de escenario crean escenarios típicos de uso y se utilizan en el de
 - Interacciones con el sistema incluyen autenticación, descarga y carga de registros, recuperación y modificación de datos, cifrado y descifrado de registros, y vinculación con la base de datos de medicamentos.
 
 ### Pruebas de Rendimiento
+
 Las pruebas de rendimiento deben diseñarse para garantizar que el sistema procese su carga pretendida. Estas pruebas aumentan gradualmente la carga hasta que el rendimiento se vuelve inaceptable. También conocidas como pruebas de esfuerzo, evalúan el comportamiento de falla del sistema y ayudan a descubrir defectos que no se encontrarían normalmente.
 
-**Ejemplo de Prueba de Carga**:
-- Para un sistema de procesamiento de transacciones diseñado para 300 transacciones por segundo, se aumenta gradualmente la carga hasta superar este límite para observar la respuesta del sistema.
-
 ## Pruebas de Usuario
-Las pruebas de usuario son una etapa en el proceso de pruebas donde los usuarios o clientes proporcionan entrada y asesoría sobre las pruebas del sistema. Se replica el entorno de trabajo del sistema para obtener resultados más precisos.
 
-### Tipos de Pruebas de Usuario
+Las pruebas de usuario son una etapa en el proceso de pruebas donde los usuarios o clientes proporcionan entrada y asesoría sobre las pruebas del sistema. Se replica el entorno de trabajo del sistema para obtener resultados más precisos. 
+
 1. **Pruebas Alfa**: Los usuarios trabajan con el equipo de diseño para probar el software en el sitio del desarrollador.
 2. **Pruebas Beta**: Una versión del software se pone a disposición de los usuarios para que experimenten y descubran problemas.
 3. **Pruebas de Aceptación**: Los clientes prueban un sistema para decidir si está listo para ser aceptado y desplegado.
 
-### Proceso de Pruebas de Aceptación
+El proceso para definir y llevar adelante una prueba de aceptación consta de los siguientes pasos:
+
 1. Definir criterios de aceptación.
 2. Planear la prueba de aceptación.
 3. Derivar las pruebas de aceptación.
@@ -38,4 +37,4 @@ Las pruebas de usuario son una etapa en el proceso de pruebas donde los usuarios
 5. Negociar los resultados de la prueba.
 6. Aceptar o rechazar el sistema.
 
-En los métodos ágiles, las pruebas de aceptación son definidas por los usuarios (examinadores alfa) y son automatizadas. El desarrollo no avanza hasta que se pasan estas pruebas, integrando así las pruebas de aceptación en el proceso de desarrollo continuo.
+En los métodos ágiles, las pruebas de aceptación son definidas por los usuarios y son automatizadas. El desarrollo no avanza hasta que se pasan estas pruebas, integrando así las pruebas de aceptación en el proceso de desarrollo continuo.
