--- a/4º Año/Metodologia de Sistemas II/Unidad 6/3. Pruebas de Software WEB.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 6/3. Pruebas de Software WEB.md
@@ -1,37 +1,35 @@
-## Introducción
+La prueba de una webapp es una colección de actividades relacionadas con descubrir errores en el contenido, función, utilidad, navegabilidad, rendimiento, capacidad y seguridad de esa aplicación.
+Para lograr esto, se aplica una estrategia de prueba que abarca tanto revisiones como pruebas ejecutables. En las pruebas de una webapp participan ingenieros en web y otros participantes en el proyecto como gestores, clientes y usuarios.
+Si los usuarios finales encuentran errores, puede que esto comprometa su confianza en el proyecto, pudiendo ir a algún otro lado en busca del contenido y de la función que necesitan, y la aplicación fracasará. Por esta razón, debe trabajarse para eliminar tantos errores como sea posible antes de poner en línea la webapp.
 
-### ¿Qué es?
-La prueba de una webapp es una colección de actividades relacionadas con una sola meta: «descubrir errores en el contenido, función, utilidad, navegabilidad, rendimiento, capacidad y seguridad de esa aplicación».
-Para lograr esto, se aplica una estrategia de prueba que abarca tanto revisiones como pruebas ejecutables.
+## Proceso de Pueba de una Aplicación Web
 
-### ¿Quién lo hace?
-En las pruebas de una webapp participan ingenieros en web y otros participantes en el proyecto (gestores, clientes y usuarios).
+El proceso de prueba de una webapp comienza enfocándose en los aspectos visibles para el usuario de la aplicación y avanza hacia pruebas que ejercitan la tecnología y la infraestructura. Generalmente se realizan siete pasos durante la prueba:
 
-### ¿Por qué es importante?
-Si los usuarios finales encuentran errores que derrumben su fe en la webapp, irán a algún otro lado en busca del contenido y de la función que necesitan, y la aplicación fracasará. Por esta razón, debe trabajarse para eliminar tantos errores como sea posible antes de poner en línea la webapp.
+1. Prueba de contenido.
+2. Prueba de interfaz.
+3. Prueba de navegación.
+4. Prueba de componente.
+5. Prueba de configuración.
+6. Prueba de rendimiento.
+7. Prueba de seguridad.
 
-### ¿Cuáles son los pasos?
-El proceso de prueba de una webapp comienza enfocándose en los aspectos visibles para el usuario de la aplicación y avanza hacia pruebas que ejercitan la tecnología y la infraestructura. Se realizan siete pasos durante la prueba: prueba de contenido, prueba de interfaz, prueba de navegación, prueba de componente, prueba de configuración, prueba de rendimiento y prueba de seguridad.
-
-### ¿Cuál es el producto final?
 En algunas ocasiones, se produce un plan de prueba para la webapp. En todo caso, se desarrolla una suite de casos de prueba para cada paso de prueba y se mantiene un archivo de los resultados de la prueba para un uso futuro.
+Aunque nunca se puede estar seguro de que se realizaron todas las pruebas que se necesitan, es posible tener la certeza de que se descubrieron errores y se corrigieron. Además, si se estableció un plan de prueba, puede realizarse la comprobación para garantizar que todas las pruebas planeadas se llevaron a cabo.
+Independientemente de que se lleve adelante un plan de prueba o no, tanto las revisiones como las pruebas comprueban una o más de las siguientes dimensiones de calidad:
 
-### ¿Cómo me aseguro de que se hizo bien?
-Aunque nunca se puede estar seguro de que se realizaron todas las pruebas que se necesitan, es posible tener la certeza de que se descubrieron errores (y se corrigieron). Además, si se estableció un plan de prueba, puede realizarse la comprobación para garantizar que todas las pruebas planeadas se llevaron a cabo.
+- **Contenido**: Se evalúa tanto en el nivel sintáctico como en el semántico.
+- **Función**: Se prueba para descubrir errores que indican falta de conformidad con los requerimientos del cliente.
+- **Estructura**: Se valora para garantizar que entrega adecuadamente el contenido y la función de la aplicación.
+- **Usabilidad**: Se prueba para asegurar que la interfaz soporta a cada categoría de usuario y que puede aprender y aplicar toda la sintaxis y semántica de navegación requerida.
+- **Navegabilidad**: Se prueba para asegurar que toda la sintaxis y la semántica de navegación se ejecutan para descubrir cualquier error de navegación.
+- **Rendimiento**: Se prueba bajo condiciones operativas, configuraciones y cargas diferentes a fin de asegurar que el sistema responde a la interacción con el usuario.
+- **Compatibilidad**: Se prueba al ejecutar la webapp en varias configuraciones anfitrión, tanto en el cliente como en el servidor.
+- **Interoperabilidad**: Se prueba para garantizar que la webapp tiene interfaz adecuada con otras aplicaciones y/o bases de datos.
+- **Seguridad**: Se prueba al valorar las vulnerabilidades potenciales e intenta explotar cada una. Cualquier intento de penetración exitoso se estima como un fallo de seguridad.
 
-## Dimensión de calidad en una aplicación web
-Tanto las revisiones como las pruebas examinan una o más de las siguientes dimensiones de calidad:
-- **Contenido**: se evalúa tanto en el nivel sintáctico como en el semántico.
-- **Función**: se prueba para descubrir errores que indican falta de conformidad con los requerimientos del cliente.
-- **Estructura**: se valora para garantizar que entrega adecuadamente el contenido y la función de la aplicación.
-- **Usabilidad**: se prueba para asegurar que la interfaz soporta a cada categoría de usuario y que puede aprender y aplicar toda la sintaxis y semántica de navegación requerida.
-- **Navegabilidad**: se prueba para asegurar que toda la sintaxis y la semántica de navegación se ejecutan para descubrir cualquier error de navegación (por ejemplo, vínculos muertos, inadecuados y erróneos).
-- **Rendimiento**: se prueba bajo condiciones operativas, configuraciones y cargas diferentes a fin de asegurar que el sistema responde a la interacción con el usuario.
-- **Compatibilidad**: se prueba al ejecutar la webapp en varias configuraciones anfitrión, tanto en el cliente como en el servidor.
-- **Interoperabilidad**: se prueba para garantizar que la webapp tiene interfaz adecuada con otras aplicaciones y/o bases de datos.
-- **Seguridad**: se prueba al valorar las vulnerabilidades potenciales e intenta explotar cada una. Cualquier intento de penetración exitoso se estima como un fallo de seguridad.
+### Pasos del Proceso de Prueba
 
-## 10 Pasos para probar webapp
 1. El modelo de contenido para la webapp se revisa a fin de descubrir errores.
 2. El modelo de interfaz se examina para garantizar que todos los casos de uso pueden alojarse.
 3. El modelo de diseño para la webapp se revisa para descubrir errores de navegación.
@@ -43,92 +41,76 @@ Tanto las revisiones como las pruebas examinan una o más de las siguientes dime
 9. Se realizan pruebas de rendimiento.
 10. La webapp se prueba con una población controlada y monitoreada de usuarios finales; los resultados de su interacción con el sistema se evalúan para detectar errores de contenido y de navegación, preocupaciones de usabilidad, compatibilidad, seguridad, confiabilidad y rendimiento de la webapp.
 
-### Prueba de contenido 
-Tiene tres objetivos importantes:
-1. Descubrir errores sintácticos (por ejemplo, errores tipográficos o gramaticales) en documentos de texto, representaciones gráficas y otros medios;
-2. Descubrir errores semánticos (es decir, errores en la precisión o completitud de la información) en cualquier objeto de contenido que se presente conforme ocurre la navegación.
+#### Prueba de Contenido 
+
+Esta etapa tiene tres objetivos importantes:
+1. Descubrir errores sintácticos en documentos de texto, representaciones gráficas y otros medios;
+2. Descubrir errores semánticos, es decir, errores en la precisión o completitud de la información en cualquier objeto de contenido que se presente conforme ocurre la navegación.
 3. Encontrar errores en la organización o estructura del contenido que se presenta al usuario final.
 
-### Prueba de base de datos
-Se requieren los siguientes pasos:
-1. Consulta a una gran base de datos de fondos,
-2. Extracción de datos relevantes de la base de datos,
-3. Organización de los datos extraídos como un objeto de contenido y
-4. Transmisión de este objeto de contenido (que representa información personalizada que requiere un usuario final) al entorno del cliente para su despliegue.
+>[!tldr] Prueba de Base de Datos
+>Se requieren los siguientes pasos:
+>
+>1. Consulta a una gran base de datos de fondos.
+>2. Extracción de datos relevantes de la base de datos.
+>3. Organización de los datos extraídos como un objeto de contenido.
+>4. Transmisión de este objeto de contenido (que representa información personalizada que requiere un usuario final) al entorno del cliente para su despliegue.
+>
+>Las pruebas deben garantizar que la información pasa entre el cliente y el servidor desde la interfaz, se procesan los guiones de manera correcta y extrae o formatea adecuadamente los datos del usuario, los datos se pasan correctamente a una función de transformación de datos del lado servidor que formatea consultas adecuadas y que las consultas pasan a una capa de gestión de datos que se comunica con las rutinas de acceso a la base de datos.
 
-Las pruebas deben garantizar que:
-1. Información válida pasa entre el cliente y el servidor desde la capa interfaz,
-2. La webapp procesa los guiones de manera correcta y extrae o formatea adecuadamente los datos del usuario,
-3. Los datos del usuario pasan correctamente a una función de transformación de datos del lado servidor que formatea consultas adecuadas (por ejemplo, SQL) y
-4. Las consultas pasan a una capa de gestión de datos que se comunica con las rutinas de acceso a la base de datos (potencialmente ubicadas en otra máquina).
+#### Prueba de Interfaz
 
-## Prueba de interfaz de usuario
+La verificación y validación de una interfaz de usuario de una aplicación web ocurre en tres puntos distintos:
 
-La verificación y validación de una interfaz de usuario de webapp ocurre en tres puntos distintos:
+1. **En el análisis de requerimientos**: El modelo de interfaz se revisa para garantizar que se da conformidad a los requerimientos de los participantes y a otros elementos del modelo de requerimientos.
+2. **En el diseño**: Se revisa el modelo de diseño de interfaz para garantizar que se logran los criterios de calidad genéricos establecidos para todas las interfaces de usuario y que los temas de diseño de interfaz específicos de la aplicación se abordaron de manera adecuada.
+3. **Durante la prueba**: La atención se centra en la ejecución de aspectos específicos de la aplicación de la interacción con el usuario, conforme se manifiesten por la sintaxis y la semántica de la interfaz.
 
-1. **Análisis de requerimientos**: el modelo de interfaz se revisa para garantizar que se da conformidad a los requerimientos de los participantes y a otros elementos del modelo de requerimientos.
-2. **En el diseño**: se revisa el modelo de diseño de interfaz para garantizar que se logran los criterios de calidad genéricos establecidos para todas las interfaces de usuario y que los temas de diseño de interfaz específicos de la aplicación se abordaron de manera adecuada.
-3. **Durante la prueba**: la atención se centra en la ejecución de aspectos específicos de la aplicación de la interacción con el usuario, conforme se manifiesten por la sintaxis y la semántica de la interfaz.
+La prueba proporciona una valoración final de la usabilidad. La estrategia de prueba de interfaz consiste de los siguientes puntos:
 
-La prueba proporciona una valoración final de la usabilidad.
+1. Descubrir errores relacionados con mecanismos de interfaz específicos.
+2. Descubrir errores en la forma en como la interfaz implanta la semántica de navegación, la funcionalidad o el despliegue de contenido.
 
-Estrategia de prueba de interfaz:
-1. Descubrir errores relacionados con mecanismos de interfaz específicos (por ejemplo, en la ejecución adecuada de un vínculo de menú o en la forma como entran los datos en un formulario).
-2. Descubrir errores en la forma como la interfaz implanta la semántica de navegación, la funcionalidad de la webapp o el despliegue de contenido.
+Para lograr que estas estrategias se lleven adelante con exito se deberá:
 
-Para lograr estas estrategias se deberá:
 1. Garantizar que las reglas del diseño, estética y contenido visual relacionado estén disponibles sin error para el usuario.
 2. Los mecanismos de interfaz individuales se prueban en forma análoga a la prueba de unidad.
 3. Cada mecanismo de interfaz se prueba dentro del contexto de un caso de uso o de una unidad semántica de navegación (USN) para una categoría de usuario específica.
-4. La interfaz completa se prueba contra los casos de uso seleccionados y las USN a fin de descubrir errores en la semántica de la interfaz. En esta etapa se lleva a cabo una serie de pruebas de usabilidad.
-5. La interfaz se prueba dentro de varios entornos (por ejemplo, navegadores) para garantizar que será compatible. Esta serie de pruebas también puede considerarse como parte de las pruebas de configuración.
+4. La interfaz completa se prueba contra los casos de uso seleccionados y las semántica de navegación a fin de descubrir errores en la semántica de la interfaz. En esta etapa se lleva a cabo una serie de pruebas de usabilidad.
+5. La interfaz se prueba dentro de varios entornos para garantizar que será compatible. Esta serie de pruebas también puede considerarse como parte de las pruebas de configuración.
 
-Prueba de mecanismos de interfaz
+##### Prueba de Mecanismos de Interfaz
+
 - **Vínculos**: Cada vínculo de navegación se prueba para garantizar que se alcanza el objetivo de contenido o función apropiados.
 - **Formularios**: Las pruebas a nivel general deben asegurarse que:
-  1. Las etiquetas identifican correctamente los campos dentro del formulario y los campos obligatorios se identifican visualmente para el usuario,
-  2. El servidor recibe toda la información contenida dentro del formulario y ningún dato se pierde en la transmisión entre cliente y servidor,
-  3. Se usan valores por defecto adecuados cuando el usuario no selecciona de un menú desplegable o conjunto de botones,
-  4. Las funciones del navegador (por ejemplo, la flecha “retroceso”) no corrompen la entrada de datos en un formulario y
-  5. Los guiones que realizan la comprobación de errores en los datos ingresados funcionan de manera adecuada y proporcionan mensajes de error significativos.
-- **Formularios (a nivel particular)**: Las pruebas deben asegurarse que:
-  1. Los campos del formulario tienen ancho y tipos de datos adecuados,
-  2. El formulario establece salvaguardas adecuadas que prohíben que el usuario ingrese cadenas de texto más largas que cierto máximo predefinido,
-  3. Todas las opciones adecuadas para menús desplegables se especifican y ordenan en forma significativa para el usuario final,
-  4. Las características de “autollenado” del navegador no conducen a errores en la entrada de datos y
-  5. La tecla de tabulación (o alguna otra) inicia el movimiento adecuado entre los campos del formulario.
+	1. Las etiquetas identifican correctamente los campos dentro del formulario y los campos obligatorios se identifican visualmente para el usuario.
+	2. El servidor recibe toda la información contenida dentro del formulario y ningún dato se pierde en la transmisión entre cliente y servidor.
+	3. Las funciones del navegador no corrompen la entrada de datos en los formularios.
+	4. Los guiones que realizan la comprobación de errores en los datos ingresados funcionan de manera adecuada y proporcionan mensajes de error significativos.
+- **Formularios a nivel particular**: Las pruebas deben asegurarse que:
+	1. Los campos del formulario tienen ancho y tipos de datos adecuados.
+	2. El formulario establece salvaguardas adecuadas que prohíben que el usuario ingrese cadenas de texto más largas que cierto máximo predefinido.
+	3. Todas las opciones adecuadas para menús desplegables se especifican y ordenan en forma significativa para el usuario final.
+	4. Las características de “autollenado” del navegador no conducen a errores en la entrada de datos.
+	5. La tecla de tabulación o alguna otra inicia el movimiento adecuado entre los campos del formulario.
 - **Guión en el lado cliente**: Estas pruebas con frecuencia se acoplan con pruebas de formularios porque la entrada del guión con frecuencia se deriva de los datos proporcionados como parte del procesamiento de formulario.
-- **HTML dinámico**: Cada página web que contenga HTML dinámico se ejecuta para asegurar que el despliegue dinámico es correcto. Además, debe llevarse a cabo una prueba de compatibilidad para asegurarse que el HTML dinámico funciona adecuadamente en las configuraciones de entorno que soportan la webapp.
+- **HTML dinámico**: Cada página web que contenga HTML dinámico se ejecuta para asegurar que el despliegue dinámico es correcto. Además, debe llevarse a cabo una prueba de compatibilidad para asegurarse que el HTML dinámico funciona adecuadamente en las configuraciones de entorno que soporta la aplicación.
 - **Ventanas pop-up**: Una serie de pruebas garantiza:
-  1. La aparición instantánea tiene el tamaño y posición adecuadas,
-  2. La aparición no cubre la ventana de la webapp original,
-  3. El diseño estético de la aparición es consistente con el diseño estético de la interfaz y
-  4. Las barras de desplazamiento y otros mecanismos de control anexados a la ventana de aparición se ubican y funcionan de manera adecuada.
-- **Guiones CGI (Common Gateway Interface)**: Las pruebas de caja negra se realizan con énfasis sobre la integridad de los datos (conforme los datos pasan al guión CGI) y del procesamiento del guión (una vez recibidos los datos validados). Además, la prueba de rendimiento puede realizarse para garantizar que la configuración del lado servidor puede alojar las demandas de procesamiento de múltiples invocaciones de los guiones CGI.
+	1. La aparición instantánea tiene el tamaño y posición adecuadas.
+	2. La aparición no cubre la ventana de la aplicación original.
+	3. El diseño estético de la aparición es consistente con el diseño estético de la interfaz.
+	4. Las barras de desplazamiento y otros mecanismos de control anexados a la ventana de aparición se ubican y funcionan de manera adecuada.
+- **Guiones CGI (Common Gateway Interface)**: Las pruebas de caja negra se realizan con énfasis sobre la integridad de los datos y del procesamiento del guión. Además, la prueba de rendimiento puede realizarse para garantizar que la configuración del lado del servidor puede alojar las demandas de procesamiento de múltiples invocaciones de los guiones CGI.
   - **Interfaz de Entrada Común (Common Gateway Interface)**: Es un programa de interfaz escritas en un lenguaje de programación como C o PERL que procesan la petición de un navegador, ejecutan el programa y formatean los resultados en HTML de manera que puedan ser presentados en el navegador. El CGI es utilizado comúnmente para contadores, bases de datos, motores de búsqueda, formularios, generadores de email automático, foros de discusión, chats, comercio electrónico, rotadores y mapas de imágenes, juegos en línea y otros.
 - **Contenido de streaming**: Las pruebas deben demostrar que los datos de streaming están actualizados, que se despliegan de manera adecuada y que pueden suspenderse sin error y reanudarse sin dificultad.
 - **Cookies**: Se requieren pruebas tanto del lado servidor como del lado cliente.
-  - **Lado servidor**: Las pruebas deben garantizar que una cookie se construyó adecuadamente (que contiene datos correctos) y que se transmitió de manera adecuada al lado cliente cuando se solicitó contenido o funcionalidad específico.
-  - **Lado cliente**: Las pruebas determinan si la webapp liga adecuadamente las cookies existentes a una solicitud específica (enviada al servidor).
+	- **Lado servidor**: Las pruebas deben garantizar que una cookie se construyó adecuadamente y que se transmitió de manera adecuada al cliente cuando se solicitó contenido o funcionalidad específico.
+	- **Lado cliente**: Las pruebas determinan si la aplicación consigue liga adecuadamente las cookies existentes a una solicitud específica.
 - **Mecanismos de interfaz específicos de aplicación**: Las pruebas se siguen conforme una lista de comprobación de funcionalidad y características que se definen mediante el mecanismo de interfaz.
-  - **Carro de compras (ejemplo)**:
-    - Prueba de frontera del número mínimo y máximo de artículos que pueden colocarse en el carro de compras.
-    - Prueba de una solicitud de “salida” para un carro de compras vacío.
-    - Prueba de borrado adecuado de un artículo del carro de compras.
-    - Prueba para determinar si una compra vacía el contenido del carro.
-    - Prueba para determinar la persistencia del contenido del carro de compras (esto debe especificarse como parte de los requerimientos del cliente).
-    - Prueba para determinar si la webapp puede recordar el contenido del carro de compras en alguna fecha futura (suponiendo que no se realizó compra alguna).
 
-### Prueba de la semántica de la interfaz
-Esta prueba “evalúa cuán bien cuida el diseño a los usuarios, ofrece instrucciones claras, entrega retroalimentación y mantiene consistencia de lenguaje y enfoque”.
+Por lo general también se suelen realizar pruebas de semántica para la interfaz de usuario. Esta prueba evalúa cuán bien cuida el diseño a los usuarios, ofreciendo instrucciones claras, entregando retroalimentación y mantiendo consistencia en su lenguaje y enfoque.
+Las pruebas de usabilidad se diseñan para determinar el grado en el cual la interfaz facilita la vida al usuario. Este tipo de pruebas puede ocurrir a varios niveles. Puede valorarse la usabilidad de un mecanismo de interfaz específico, puede evaluarse la usabilidad de una página web completa o puede considerarse la usabilidad de la webapp completa. Para generar la lista de pruebas de usabilidad se debe tener en cuenta:
 
-### Pruebas de usabilidad
-Las pruebas de usabilidad se diseñan para determinar el grado en el cual la interfaz de la webapp facilita la vida del usuario. Puede ocurrir en varios niveles:
-1. Puede valorarse la usabilidad de un mecanismo de interfaz específico (por ejemplo, un formulario),
-2. Puede evaluarse la usabilidad de una página web completa (que abarque mecanismos de interfaz, objetos de datos y funciones relacionadas) y
-3. Puede considerarse la usabilidad de la webapp completa.
-
-Para generar la lista de pruebas de usabilidad se debe tener en cuenta:
 - **Interactividad**: ¿Los mecanismos de interacción (por ejemplo, menús desplegables, botones, punteros) son fáciles de entender y usar?
 - **Plantilla**: ¿Los mecanismos de navegación, contenido y funciones se colocan de forma que el usuario pueda encontrarlos rápidamente?
 - **Legibilidad**: ¿El texto está bien escrito y es comprensible? ¿Las representaciones gráficas se entienden con facilidad?
@@ -138,27 +120,23 @@ Para generar la lista de pruebas de usabilidad se debe tener en cuenta:
 - **Personalización**: ¿La webapp se adapta a las necesidades específicas de diferentes categorías de usuario o de usuarios individuales?
 - **Accesibilidad**: ¿La webapp es accesible a personas que tienen discapacidades?
 
-### Pruebas de compatibilidad
-Definir un conjunto de configuraciones de cómputo, y sus variantes, que “se encuentran comúnmente” en el lado cliente.
-Se crea una estructura de árbol, identificación de cada plataforma de cómputo, dispositivos de despliegue usuales, sistemas operativos aceptados en la plataforma, navegadores disponibles, probables velocidades de conexión a internet e información similar.
+>[!tldr] Pruebas de Compatibilidad y Componenete
+>Para testear correctamente la interfaz de usuario es conveniente definir un conjunto de configuraciones de cómputo, y sus variantes, de esta forma se puede probar su desempeño y funcionamiento en cada plataforma de cómputo, dispositivos de despliegue usuales, sistemas operativos aceptados en la plataforma, navegadores disponibles, probables velocidades de conexión a internet e información similar.
 
-## Prueba en el nivel de componente
-También llamada prueba de función, se enfoca en un conjunto de pruebas que intentan descubrir errores en funciones de las webapps.
-Los casos de prueba en el nivel de componente con frecuencia se derivan de la entrada a formularios. Una vez definidos los datos de los formularios, el usuario selecciona un botón u otro mecanismo de control para iniciar la ejecución.
+#### Prueba de Componente
 
-### Métodos de diseño de casos de prueba:
+Las pruebas de componentes tambien son importantes, ya que en las mismas se intentan describrir errores en las funciones de la aplicacción web. Los casos de prueba en el nivel de componente con frecuencia se derivan de la entrada a formularios. Una vez definidos los datos de los formularios, el usuario selecciona un botón u otro mecanismo de control para iniciar la ejecución.
+El método genérico para el diseño de los disitintos casos de prueba consiste de los siguientes pasos:
+
 1. **Partición de equivalencia**: El dominio de entrada de la función se divide en categorías o clases de entrada a partir de las cuales se derivan casos de prueba.
 2. **Análisis de valor de frontera**: Los datos de los formularios se prueban en sus fronteras.
-3. **Prueba de rutas**: Si la complejidad lógica de la función es alta, puede usarse la prueba de rutas (un método de diseño de casos de prueba de caja blanca) para garantizar que se ejercitó cada ruta independiente en el programa.
+3. **Prueba de rutas**: Si la complejidad lógica de la función es alta, puede usarse la prueba de rutas para garantizar que se ejercitó cada ruta independiente en el programa.
 4. **Prueba de error forzado**: Derivar casos de prueba que a propósito conducen al componente web a una condición de error.
 
-## Prueba de navegación
+#### Prueba de Navegación
 
-La labor de la prueba de navegación es:
-1. Garantizar que son funcionales todos los mecanismos que permiten al usuario de la webapp recorrerla.
-2. Validar que cada unidad semántica de navegación (USN) pueda lograr la categoría de usuario apropiada.
+La labor de la prueba de navegación es garantizar que son funcionales todos los mecanismos que permiten al usuario de la aplicacción recorrerla y validar que cada unidad semántica de navegación pueda lograr la categoría de usuario apropiada. Las prueba de sintaxis de navegación se realizan sobre las siguientes funcionalidades de la aplicación:
 
-Prueba de sintaxis de navegación
 - **Vínculos de navegación**: Cada vínculo debe ser probado para asegurarse de que se alcanza el contenido o funcionalidad adecuados cuando se elige el vínculo.
 - **Redirecciones**: Estos vínculos entran en juego cuando un usuario solicita una URL inexistente o cuando selecciona un vínculo cuyo contenido se removió o cuyo nombre cambió.
 - **Marcas de página (favoritos, bookmarks)**: Aunque las marcas de página son función del navegador, la webapp debe probarse para garantizar la extracción de un título de página significativo conforme se crea la marca.
@@ -166,69 +144,49 @@ Prueba de sintaxis de navegación
 - **Mapas de sitio**: Cada entrada del mapa de sitio debe probarse para garantizar que los vínculos llevan al usuario al contenido o funcionalidad adecuados.
 - **Motores de búsqueda internos**: Un motor de búsqueda interno permite al usuario realizar una búsqueda de palabra clave dentro de la webapp para encontrar el contenido necesario. La prueba del motor de búsqueda valida la precisión y completitud de la búsqueda, las propiedades de manejo de error del motor de búsqueda y las características de búsqueda avanzadas.
 
-### Prueba de la semántica de navegación
-Una unidad semántica de navegación (USN) se define como “un conjunto de estructuras de información y navegación relacionada que colaboran en el cumplimiento de un subconjunto de requerimientos de usuario relacionados”. La prueba de navegación ejercita cada USN para asegurarse de que dichos requerimientos pueden lograrse.
+>[!tldr] Unidad Semántica de Navegación
+>Una unidad semántica de navegación se define como un conjunto de estructuras de información y navegación relacionada que colaboran en el cumplimiento de un subconjunto de requerimientos de usuario relacionados. La prueba de navegación ejercita cada unidad semántica de navegación para asegurarse de que dichos requerimientos pueden lograrse.
 
-## Prueba de configuración
-### Prueba de la semántica de navegación
-La labor de la prueba de configuración es probar un conjunto de probables configuraciones en los lados cliente y servidor para garantizar que la experiencia del usuario será la misma en todos ellos y que aislará los errores que puedan ser específicos de una configuración particular.
+#### Prueba de Configuración
 
-### Casos de prueba de configuración
-- **Servidor**: Verificar que la configuración servidor proyectada, es decir, servidor webapp, servidor de base de datos, sistemas operativos, software de firewall (cortafuegos), aplicaciones concurrentes, pueden soportar la webapp sin error.
+La labor de la prueba de configuración es probar un conjunto de probables configuraciones en los lados cliente y servidor para garantizar que la experiencia del usuario será la misma en todos ellos y que aislará los errores que puedan ser específicos de una configuración particular. Las pruebas de configuración se realizan sobre las distintas partes que componen o dependen de la aplicación:
+
+- **Servidor**: Verificar que la configuración del servidor proyectada, es decir, servidor de la aplicación, servidor de base de datos, sistemas operativos, firewall, aplicaciones concurrentes, pueden soportar la aplicación sin error.
 - **Cliente**: Cada categoría de usuario se valora para determinar las probables configuraciones que pueden encontrarse dentro de la categoría.
   - **Hardware**: CPU, memoria, almacenamiento y dispositivos de impresión
   - **Sistemas operativos**: Linux, Macintosh OS, Microsoft Windows, un OS móvil
-  - **Software navegador**: Firefox, Safari, Internet Explorer, Opera, Chrome y otros
+  - **Navegador**: Firefox, Safari, Internet Explorer, Opera, Chrome y otros
   - **Componentes de interfaz de usuario**: Active X, Java applets y otros
   - **Plug-ins**: QuickTime, RealPlayer y muchos otros
   - **Conectividad**: cable, DSL, WiFi
 
-## Pruebas de seguridad
-Las pruebas de seguridad se diseñan para sondear las vulnerabilidades del entorno lado cliente, las comunicaciones de red que ocurren conforme los datos pasan de cliente a servidor y viceversa, y el entorno del lado servidor.
+#### Pruebas de Seguridad
 
-### Vulnerabilidades del lado cliente:
-- Errores preexistentes en navegadores, programas de correo electrónico o software de comunicación.
-- Acceso no autorizado a las cookies colocadas dentro del navegador.
+Las pruebas de seguridad se diseñan para sondear las vulnerabilidades del entorno desde el lado del cliente, las comunicaciones de red que ocurren conforme los datos pasan de cliente a servidor y viceversa, y el entorno del lado servidor.
 
-### Vulnerabilidades del lado servidor:
-- **Spoofing (engaño)**: Ocurre cuando un extremo de la ruta de comunicación se trastorna por una entidad con intenciones maliciosas.
-- **Ataques de negación de servicio**: Guiones maliciosos que pueden pasar hacia el lado cliente o usarse para deshabilitar operaciones del servidor.
-- **Robo de datos**: Acceso sin autorización a las bases de datos en el lado servidor.
-
-### Tecnologías de seguridad:
-- **Firewall**
-- **Autenticación**
-- **Encriptado**
-- **Autorización**
+- **Vulnerabilidades del lado del cliente**
+	- Errores preexistentes en navegadores, programas de correo electrónico o software de comunicación.
+	- Acceso no autorizado a las cookies colocadas dentro del navegador.
+- **Vulnerabilidad del lado del servidor**
+	- **Spoofing (engaño)**: Ocurre cuando un extremo de la ruta de comunicación se trastorna por una entidad con intenciones maliciosas.
+	- **Ataques de negación de servicio**: Guiones maliciosos que pueden pasar hacia el lado cliente o usarse para deshabilitar operaciones del servidor.
+	- **Robo de datos**: Acceso sin autorización a las bases de datos en el lado servidor.
 
 Las pruebas de seguridad deben diseñarse para sondear cada una de estas tecnologías de seguridad con la intención de descubrir huecos en la seguridad.
 
-## Pruebas de rendimiento
-Las pruebas de rendimiento se usan para descubrir problemas de rendimiento que pueden ser resultado de:
-- Falta de recursos en el lado servidor,
-- Red con ancho de banda inadecuada,
-- Capacidades de base de datos inadecuadas,
-- Capacidades de sistema operativo deficientes o débiles,
-- Funcionalidad de webapp pobremente diseñada y otros conflictos de hardware o software que pueden conducir a rendimiento cliente-servidor degradado.
+#### Pruebas de Rendimiento
 
-### Prueba de carga
-La intención de la prueba de carga es determinar cómo responderán las webapps y su entorno del lado servidor a varias condiciones de carga.
+Las pruebas de rendimiento se usan para descubrir problemas de rendimiento que pueden ser resultado de la falta de recursos en el lado servidor, una red con ancho de banda inadecuada, disminución de la capacidades de base de datos, deficiencia o debilidad en el sistema operativo, una funcionalidad pobremente diseñada y otros conflictos de hardware o software que pueden conducir a rendimiento cliente-servidor degradado.
+En este contexto, la intención de las ***pruebas de carga*** es determinar cómo responderán las aplicaciones web y sus servidores a varias condiciones de carga.
 
-**Parámetros de la prueba de carga**:
-- **N**: número de usuarios concurrentes
-- **T**: número de transacciones en línea por unidad de tiempo
-- **D**: carga de datos procesados por el servidor en cada transacción
+>[!tldr] Parámetros de la Prueba de Carga
+>Cuando se realiza una prueba de carga se tienen en cuenta los siguientes parámetros:
+>
+>- **N**: número de usuarios concurrentes.
+>- **T**: número de transacciones en línea por unidad de tiempo.
+>- **D**: carga de datos procesados por el servidor en cada transacción.
+> 
+>El rendimiento global de la aplicación, se calcula mediante la siguiente fórmula
+>$$P = N \times T \times D$$
 
-El rendimiento global, **P**, se calcula de la forma siguiente:
-\[ P = N x T x D \]
-
-#### Ejemplo:
-Un sitio popular de noticias deportivas. En un momento dado, 20,000 usuarios concurrentes envían una solicitud (una transacción, T) una vez cada 2 minutos en promedio. Cada transacción requiere que la webapp descargue un nuevo artículo que promedia 3 Kb de longitud. Por tanto, el rendimiento global puede calcularse como:
-\[ P = \frac{20,000 x 0.5 x 3 Kb}{60} = 500 Kbytes/s = 4 megabits/s \]
-
-Por lo tanto, la conexión de la red para el servidor tendría que soportar esta tasa de datos y debería ponerse a prueba para asegurarse de que lo hace.
-
-### Prueba de esfuerzo
-La prueba de esfuerzo es una continuación de la prueba de carga, pero en esta instancia las variables **N**, **T** y **D** se forzan a satisfacerse y luego se superan los límites operativos.
-
-En este tipo de pruebas, la carga alcanza un pico de capacidad, luego se baja rápidamente a condiciones operativas normales y después alcanza de nuevo un pico. Al rebotar la carga del sistema, es posible determinar si el servidor puede ordenar los recursos para satisfacer una demanda muy alta y entonces liberarlos cuando reaparecen condiciones normales (de modo que esté listo para el siguiente pico).
+Las ***pruebas de esfuerzo*** es una continuación de la prueba de carga. En este tipo de pruebas, la carga alcanza un pico de capacidad, luego se baja rápidamente a condiciones operativas normales y después alcanza de nuevo un pico. Al rebotar la carga del sistema, es posible determinar si el servidor puede ordenar los recursos para satisfacer una demanda muy alta y entonces liberarlos cuando reaparecen condiciones normales.
